--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "config": "^3.3.1",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.7",
+    "shortid": "^2.2.15",
+    "valid-url": "^1.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
